--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: <todo>
+        image: us-central1-docker.pkg.dev/qwiklabs-gcp-04-338db2d6e9e0/my-repository/hello-cloudbuild:1.0
         ports:
         - containerPort: 8080
